# cah_bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  _auto_config.sh  cah.service  common.sh  config.py  config.yaml  ppmgr.sh  push_changes.sh  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.cfg  setup.py  tox.ini  update_script.sh
cah/: __init__.py  _version.py  app.py  bot_base.py  cards.py  commands.yaml  common_methods.py  crons.py  db.py  db_eng.py  forms.py  games.py  logg.py  players.py  utils.py
cah/core/: bot_queries.py  cards.py  common_methods.py  deck.py  game_queries.py  games.py  player_queries.py  players.py  selections.py
cah/develop/: query_test.py
cah/etl/: db_transfer.py  etl_all.py  etl_decks.py  etl_games.py  etl_gs.py  etl_players.py  etl_script.py
cah/model/: __init__.py  base.py  bot.py  card.py  cards.py  deck.py  decks.py  error.py  game.py  games.py  player.py  players.py  rips.py  setting.py  task.py
cah/queries/: bot_queries.py  game_queries.py  player_queries.py
cah/routes/: actions.py  crons.py  events.py  helpers.py  main.py  slash.py
cah/settings/: __init__.py  config.py
tests/: common.py  test_app.py  test_bot_base.py  test_cards.py  test_db_eng.py  test_forms.py  test_gameplay.py  test_utils.py
tests/core/: test_cards.py  test_common_methods.py  test_deck.py  test_games.py  test_players.py  test_selections.py
tests/mocks/: channels.py  db_objects.py  users.py
