[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cah"
version = "2.0.0"
description = "A slackbot for playing Cards Against Humanity on Slack."
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/cah_bot'
packages = [
    { include = 'cah' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
slacktools = {git = "https://github.com/barretobrock/slacktools.git"}
kavalkilu = {git = "https://github.com/barretobrock/kavalkilu.git"}
Flask = "2.1.1"
psycopg2 = "2.9.3"
loguru = "0.6.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
pykeepass = "^4.0.1"
requests = ">=2.23.0"
slackeventsapi = "3.0.1"
sqlalchemy = "1.4.32"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.extras]
test = ["pytest"]
